--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
   font_awesome_flutter: ^9.2.0
+  bottom_navy_bar: ^6.0.0
+  intl: ^0.17.0
+  cloud_firestore: ^3.1.8
+  firebase_core: ^1.12.0
+  firebase_auth: ^3.3.7
+  flutterfire_ui: ^0.3.4
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
