--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutterfire_ui: ^0.3.4
   shared_preferences: ^2.0.13
   async: ^2.8.2
+  workmanager: ^0.4.1
 
 dev_dependencies:
   flutter_test:
