--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   shared_preferences: ^2.0.13
   async: ^2.8.2
   workmanager: ^0.4.1
+  add_2_calendar: ^2.1.3
+  date_time_picker: ^2.1.0
 
 dev_dependencies:
   flutter_test:
